--- a/components/Navigation.module.scss
+++ b/components/Navigation.module.scss
@@ -75,6 +75,10 @@
   }
 }
 
+.hide {
+  display: none;
+}
+
 .active {
   a {
     color: white;
@@ -101,6 +105,11 @@
 }
 
 @media screen and (max-width: 800px) {
+
+  .hide {
+    display: block;
+  }
+
   .header {
     display: none;
   }
@@ -129,7 +138,7 @@
 
     .hotDog1 {
       position: absolute;
-      top: 18px;
+      top: 19px;
       left: 10px;
       width: 25px;
       height: 5px;
@@ -140,7 +149,7 @@
 
     .hotDog2 {
       position: absolute;
-      top: 29px;
+      top: 30px;
       left: 10px;
       width: 25px;
       height: 5px;
@@ -148,6 +157,11 @@
       border-radius: 5px;
       transition: all 0.1s ease-in-out;
     }
+  }
+
+  .menuContent {
+    margin-top: 10px;
+    margin-left: -5px;
   }
 
   .navigation {
@@ -202,6 +216,7 @@
       margin-left: var(--mobile-padding);
       font-weight: 900;
       opacity: 0.6;
+      color: var(--gray7);
     }
 
     .mobileNavigationBarSubtitle {
@@ -209,8 +224,10 @@
       text-transform: uppercase;
       letter-spacing: 1px;
       margin-left: 5px;
+      margin-top: 2px;
       font-weight: 900;
       opacity: 0.4;
+      color: var(--gray7);
     }
   }
 }
